# privy-react-solana-counter

./: .gitignore  Anchor.toml  Cargo.toml  main.ts  package-lock.json  package.json  tsconfig.json
app/: package-lock.json  package.json
app/src/: App.tsx  main.tsx  styles.tsx
app/src/counter/: counter-button.tsx  example.json  example.ts  incriment.tsx  login.tsx  logout.tsx  offRampNative.tsx  offramp.tsx  snappipay.json  snappipay.ts
programs/test-project/: Cargo.toml
programs/test-project/src/: lib.rs
tests/: test-project.ts
